2008-06-14  Adam Fedor  <fedor@gnu.org>

	* Version 0.14.0

2008-06-12  Adam Fedor  <fedor@gnu.org>

	* Source/NSCachedImageRep.m, Source/NSMenuItem.m, Source/tiff.m:
	Fix incorrect commits

2008-06-08  Adam Fedor  <fedor@gnu.org>

	* Revert library license version to 2 until applications
	can be converted.

2008-06-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-sendEvent:): Make the implemenation of the
	method prepareForDragOperation: non mandatory.

2008-06-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m: Indentation changes.
	* Source/NSTextFieldCell.m ([-drawInteriorWithFrame:inView:]):
	Move editing check from here to ...
	* Source/NSControl.m (-drawRect:): ... here.

2008-06-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSNibCompatibility.m (NSWindowTemplate-initWithCoder:):
	Use default maxSize for window if none is given in the NIB file.
	* Source/NSButtonCell.m (-drawInteriorWithFrame:inView:): Adjust
	the image position if either the image or the text doesn't exist.
		
2008-05-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuItem.m (-setKeyEquivalent:): Warn about
	incompatibility with MacOSX.

2008-05-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSTheme.m (-tilesNamed:cache:): Make sure local variable
	is initialized before using it.
	
2008-05-25  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/GNUmakefile.postamble (after-install): Use
	GNUSTEP_DOC instead of GNUSTEP_DOCUMENTATION and GNUSTEP_DOC_MAN
	instead of GNUSTEP_DOCUMENTATION_MAN.

2008-05-24 10:54-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSWindow.h: Minor cleanup and spacing.
	* Source/GSNibTemplates.m: Removed call to designated init, since
	this is handled by the initWithCoder method in NSWindow.m.
	* Source/NSWindow.m: Correction for calling the designated initializer.
	Fix for bug#23336.

2008-05-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m (-_substituteFontFor:font:fromList:): 